--- a/.github/workflows/api-automation.yml
+++ b/.github/workflows/api-automation.yml
@@ -56,5 +56,5 @@ jobs:
       if: always()
       uses: peaceiris/actions-gh-pages@v4.0.0
       with:
-         PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         PERSONAL_TOKEN: ${{ secrets.QA }}
          PUBLISH_DIR: allure-report
